[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/Golem.png" type="Texture" id=1]
[ext_resource path="res://sprites/Background.png" type="Texture" id=2]
[ext_resource path="res://fonts/NES.tres" type="DynamicFont" id=4]
[ext_resource path="res://src2/Battle.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.509804 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 0.992157, 0.00392157, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.00784314, 0.00784314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.537255, 0.203922, 0.203922, 0.454902 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.294118 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=7]
antialiased = false
font_path = "res://fonts/Adventurer.ttf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "enemy_died"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "mini_shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, -2 ), Vector2( 2, 2 ), Vector2( -2, 2 ), Vector2( 1, -2 ), Vector2( -3, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -7, -7 ), Vector2( 8, 8 ), Vector2( -5, 6 ), Vector2( 5, -4 ), Vector2( -7, -5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 0.517647 )

[node name="Battle" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -240.0
margin_right = 400.0
margin_bottom = 240.0
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -239.0
margin_right = 400.0
margin_bottom = 241.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="PlayerPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -77.0
margin_right = 1.0
margin_bottom = -45.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
margin_top = 9.0
margin_right = 390.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "PLAYER"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
margin_left = 394.0
margin_top = 8.0
margin_right = 784.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 50.0
step = 1.0
value = 25.0
percent_visible = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "HP: 25/50"
align = 1
valign = 1

[node name="ActionsPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_right = 160.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 3 )

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Precision" type="Button" parent="ActionsPanel/Actions"]
margin_right = 98.0
margin_bottom = 20.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Attack"

[node name="Defend" type="Button" parent="ActionsPanel/Actions"]
margin_left = 104.0
margin_right = 203.0
margin_bottom = 20.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "iTEM"

[node name="Run" type="Button" parent="ActionsPanel/Actions"]
margin_left = 209.0
margin_right = 308.0
margin_bottom = 20.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Skip"

[node name="Textbox" type="Panel" parent="."]
visible = false
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 8 )
text = "A DRAGON appears!"

[node name="Ticker" type="Label" parent="Textbox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -11.0
margin_top = -19.0
margin_right = -4.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 8 )
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/enemy_damaged = SubResource( 9 )
anims/enemy_died = SubResource( 13 )
anims/mini_shake = SubResource( 12 )
anims/shake = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
drag_margin_h_enabled = true

[node name="Precision" type="Panel" parent="."]
visible = false
anchor_left = 0.167
anchor_top = -0.275
anchor_right = 0.167
anchor_bottom = -0.275
margin_left = -130.6
margin_top = 236.0
margin_right = 669.4
margin_bottom = 536.0
custom_styles/panel = SubResource( 14 )

[node name="Prec1" type="Button" parent="Precision"]
margin_right = 300.0
margin_bottom = 100.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
align = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Precision/Prec1"]
anchor_left = 0.01
anchor_top = 0.03
anchor_right = 0.01
anchor_bottom = 0.03
margin_left = 1.0
margin_top = -3.0
margin_right = 301.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 15 )
text = "The quick brown fox jumps over the lazy dog"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Prec2" type="Button" parent="Precision"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_bottom = 100.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
align = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Precision/Prec2"]
anchor_left = -0.01
anchor_top = 0.02
anchor_right = -0.01
anchor_bottom = 0.02
margin_left = 1.0
margin_top = -3.0
margin_right = 301.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 15 )
text = "The quick brown fox jumps over the lazy dog"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Prec3" type="Button" parent="Precision"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 300.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
align = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Precision/Prec3"]
anchor_left = -0.00333333
anchor_top = 0.04
anchor_right = -0.00333333
anchor_bottom = 0.04
margin_left = 1.0
margin_top = -3.0
margin_right = 301.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 15 )
text = "The quick brown fox jumps over the lazy dog"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Prec4" type="Button" parent="Precision"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -100.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
align = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Precision/Prec4"]
anchor_left = 0.00666667
anchor_top = 0.0599999
anchor_right = 0.00666667
anchor_bottom = 0.0600003
margin_left = 1.0
margin_top = -3.0
margin_right = 301.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 15 )
text = "The quick brown fox jumps over the lazy dog"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="temporario" type="Label" parent="."]
margin_left = 297.0
margin_top = 67.0
margin_right = 480.0
margin_bottom = 125.0

[node name="EnemyContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.5
margin_top = -152.5
margin_right = 142.5
margin_bottom = 152.5
rect_scale = Vector2( 0.9, 0.8 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
margin_right = 285.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "HP: 25/50"
align = 1
valign = 1

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
margin_top = 20.0
margin_right = 285.0
margin_bottom = 305.0
texture = ExtResource( 1 )
stretch_mode = 4

[connection signal="pressed" from="ActionsPanel/Actions/Precision" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Precision" to="." method="_on_Precision_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Defend" to="." method="_on_Defend_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="Precision/Prec1" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="Precision/Prec1" to="." method="_on_Prec1_pressed"]
[connection signal="pressed" from="Precision/Prec2" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="Precision/Prec2" to="." method="_on_Prec2_pressed"]
[connection signal="pressed" from="Precision/Prec3" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="Precision/Prec3" to="." method="_on_Prec3_pressed"]
[connection signal="pressed" from="Precision/Prec4" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="Precision/Prec4" to="." method="_on_Prec4_pressed"]
